# ChangeLog for Gentoo System Intialization ("rc") scripts
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPLv2

  26 Apr 2007; Roy Marples <uberlord@gentoo.org>:

    checkroot and checkfs now use more friendly generic options, #116016.

  25 Apr 2007; Roy Marples <uberlord@gentoo.org>:

    We now have an alternative to buffering stdout and stderr.
	RC_PREFIX="yes" will put the service name as a prefix to all output
	made by the service. Thanks to Ciaran McCreesh for the idea.

  24 Apr 2007; Roy Marples <uberlord@gentoo.org>:

    We now buffer stdout and stderr to a file and flush that when running in
	parallel. RC_PARALLEL_STARTUP has been renamed to RC_PARALLEL.

  20 Apr 2007; Mike Frysinger <vapier@gentoo.org>:

    Automatically mount selinuxfs on /selinux in localmount.

  20 Apr 2007; Roy Marples <uberlord@gentoo.org>:

    Added the rc-abort command, #175106 thanks to Daniel Drake.

    Plugins now run in a forked process for extra resliance.

  17 Apr 2007; Roy Marples <uberlord@gentoo.org>:

    Fix bridge, vlan and bonding modules to work together, #174792.
    env vars ECOLOR_GOOD and friends now override our hardcoded builtins.

  16 Apr 2007; Mike Frysinger <vapier@gentoo.org>:

    Allow addons to pass up their exit status in import_addon.

    Simplify /dev handling in init.sh and add mdev as an option.

  16 Apr 2007; Roy Marples <uberlord@gentoo.org>:

	Punted the volumes init script. Volume handling will be handled by
	init script that can be run at any point, even before checkroot.

  	Don't search for a space after interface names in /proc/net, #174792
	thanks to Mike Auty.

  13 Apr 2007; Roy Marples <uberlord@gentoo.org>:

	Fix module loading, #174360.
	s-s-d now changes group when changing user, #174362.
	netmask -> CIDR is worked out correctly #174341.

* baselayout-2.0.0_alpha1 (11 Apr 2007)

  07 Apr 2007; Mike Frysinger <vapier@gentoo.org>:

  	"modules-update" -> "update-modules".
