@@ -94,11 +94,13 @@ librc_hidden_proto(rc_start_service)
 librc_hidden_proto(rc_stop_service)
 librc_hidden_proto(rc_strcatpaths)
 librc_hidden_proto(rc_strlist_add)
+librc_hidden_proto(rc_strlist_addu)
 librc_hidden_proto(rc_strlist_addsort)
 librc_hidden_proto(rc_strlist_addsortc)
 librc_hidden_proto(rc_strlist_addsortu)
 librc_hidden_proto(rc_strlist_delete)
 librc_hidden_proto(rc_strlist_free)
+librc_hidden_proto(rc_strlist_join)
 librc_hidden_proto(rc_strlist_reverse)
 librc_hidden_proto(rc_update_deptree)
 librc_hidden_proto(rc_wait_service)
